--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <header>
 
 	<img class="medallion" src="images/medallion.svg" alt="">
-	<h1 id="top"><span class="symbols"><br>生肖<br></span>Chinese Zodiac</h1>
+	<h1 id="top"><span class="symbols"><br>生肖<br></span><b>Chinese Zodiac</b></h1>
+</header>
+<main>
 
 
 
@@ -25,8 +27,6 @@
 			<li><a href="#ox">牛 — Ox</a></li>
 		</ul>
 	</nav>
-</header>
-<main>
 
 	<img class="banner" src="images/banner.jpg" alt="">
 
@@ -37,7 +37,7 @@
 	according to a 12-year mathematical cycle and it remains popular in several
 	East Asian countries including China, Vietnam, Korea, Japan, and Thailand.</p>
 
-	<h2 class="dragon-ox" id="dragon">Dragon</h2>
+	<h2 class="dragon-ox" id="dragon"><b>Dragon</b></h2>
 
 	<div class="left-symbol-1">
 		<img class="symbol-img" src="images/dragon-symbol.svg" alt="">
@@ -51,7 +51,7 @@
 		noble, direct, dignified, passionate.</p>
 
 
-	<h2 class="title-goat" id="goat">Goat</h2>
+	<h2 class="title-goat" id="goat"><b>Goat</b></h2>
 
 	<div class="left-symbol-goat">
 		<img class="symbol-img" src="images/goat-symbol.svg" alt="">
@@ -65,7 +65,7 @@
 		hardworking, persistent, thrift.</p>
 
 
-	<h2 class="title-rooster" id="rooster">Rooster</h2>
+	<h2 class="title-rooster" id="rooster"><b>Rooster</b></h2>
 
 	<div class="left-symbol-rooster">
 		<img class="symbol-img" src="images/rooster-symbol.svg" alt="">
@@ -78,7 +78,7 @@
 	<p class="caption-rooster">Deep thinkers, honest, bright, communicative, ambitious,
 	capable, warm-hearted.</p>
 
-	<h2 class="dragon-ox" id="ox">Ox</h2>
+	<h2 class="dragon-ox" id="ox"><b>Ox</b></h2>
 
 	<div class="left-symbol-1">
 		<img class="symbol-img" src="images/ox-symbol.svg" alt="">
